@@ -28,6 +28,7 @@ test = function(num,x,y=NULL,error,warning,output) {
         patt = txt = ifelse(!missing(error),error,warning)
         patt = gsub("[(]","[(]",patt)
         patt = gsub("[)]","[)]",patt)
+        patt = gsub("\\^","\\\\^", patt)  # for test 923 containing 2^31 in error message
         if (! (inherits(err,"try-error") &&
               length(grep(patt,err)) &&
               ((type=="error" && !length(grep("converted from warning",err))) ||
@@ -749,7 +750,7 @@ test(250, x[y,mult="first"], data.table(a=c("b","d","e"),b=c(2L,NA,NA),d=c(8,9,1
 
 x=data.table( a=c("a","b","b","c"), b=1:4, key="a" )
 y=data.table(a=c("b","d","b"), d=c(8,9,10))
-test(251, x[y], data.table(a=c("b","b","d","b","b"),b=c(2:3,NA,2:3),d=c(8,8,9,10,10)))
+test(251, x[y, allow.cartesian=TRUE], data.table(a=c("b","b","d","b","b"),b=c(2:3,NA,2:3),d=c(8,8,9,10,10)))
 
 # auto coerce float to int in ad hoc by (just like setkey), FR#1051
 DT = data.table(a=INT(1,1,1,2,2),v=1:5)
@@ -782,7 +783,7 @@ test(260, DT[,list(fns[[fn]](SCORE_1,SCORE_2,SCORE_3)),by=ID]$V1, c(30:26,6:10))
 
 # fix for bug #1340 - Duplicate column names in self-joins (but print ok)
 DT <- data.table(id=1:4, x1=c("a","a","b","c"), x2=c(1L,2L,3L,3L), key="x1")
-test(261, DT[DT][id < id.1]$x2.1, 2L)
+test(261, DT[DT, allow.cartesian=TRUE][id < id.1]$x2.1, 2L)
 
 # "<-" within j now assigns in the same environment for 1st group, as the rest
 # Thanks to Andeas Borg for highlighting on 11 May
@@ -1439,8 +1440,8 @@ test(484, DT, data.table(x=1:4))  # i.e. DT as it was before, without foo being 
 # Test i's key longer than x's
 d1 <- data.table(a=1:2, b=11:14, key="a,b")
 d2 <- data.table(A=0:1, B=1:4, key="A")
-test(485, d2[d1], data.table(A=INT(1,1,1,1,2,2),B=INT(2,4,2,4,NA,NA),b=INT(11,11,13,13,12,14),key="A"))
-test(486, d2[d1,sum(B)], data.table(A=INT(1,1,2,2),V1=INT(6,6,NA,NA),key="A"))
+test(485, d2[d1, allow.cartesian=TRUE], data.table(A=INT(1,1,1,1,2,2),B=INT(2,4,2,4,NA,NA),b=INT(11,11,13,13,12,14),key="A"))
+test(486, d2[d1,sum(B)], data.table(A=INT(1,1,2,2),V1=INT(6,6,NA,NA),key="A"))  # no allow.cartesian needed due to by-without-by
 
 if ("package:reshape" %in% search()) {
     DT <- data.table(ID=rep(1:3, each=3), TIME=rep(1:3, 3), X=1:9)
@@ -2239,9 +2240,10 @@ X = CJ(a=seq_len(1e3),b=seq_len(1e3))
 Y = copy(X)
 X[4,b:=3L]     # create a dup group, to force allLen1=FALSE
 setkey(X)
-test(819, system.time(X[Y])["user.self"] < 5)   # Was many minutes in 1.8.2!  Now well under 1s, but 5s for wide tolerance for CRAN.
-                                                # We do want CRAN to tell us if any changes in R or elsewhere cause the 2 minute bug to
-                                                # so that's why it isn't excluded by an if(.devtesting)
+test(819, system.time(X[Y,allow.cartesian=TRUE])["user.self"] < 5)
+# Many minutes in 1.8.2!  Now well under 1s, but 5s for wide tolerance for CRAN. We like CRAN to tell us if any changes
+# in R or elsewhere cause the 2 minute bug to return. Hence not excluded by an if(.devtesting)
+
 test(820, system.time(X[Y,mult="first"])["user.self"] < 5)
 
 # Optimization of lapply(,"+"), #2212
@@ -2570,6 +2572,11 @@ test(921, Y[X,nomatch=0], data.table(depID=c(31,33,33,34,34),depName=c("Sal","En
 DT = data.table(a=1:2,b=3:4,c=5:6,key="b")
 test(922, setnames(DT,c("A","B","C")), data.table(A=1:2,B=3:4,C=5:6,key="B"))
 
+# vecseq overflow, crash bug #2464
+DT = data.table(x=rep(1L,50000),key="x")
+test(923, DT[DT], error="Join results in more than 2^31 rows (internal vecseq reached physical limit). Very likely misspecified join.")
+X = data.table(x=1:2,y=1:6,key="x")
+test(924, X[J(c(1,1,1))], error="Join results in 9 rows; more than 6 = max(nrow(x),nrow(i)). Check for duplicate key values in i, each of")
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 # TO DO: tests on double in add hoc by
